--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
 
 services:
-
   rabbitmq:
+    container_name: rabbitmq
     image: rabbitmq:management
     ports:
       - "5672:5672"
       - "15672:15672"
     networks:
       - mynet
+    
 
   dbapp:
+    container_name: dbapp
     image: sb-dbapp
     ports:
       - "8080:8080"
@@ -18,6 +20,7 @@ services:
  
       
   consumer:
+    container_name: consumer
     image: sb-consumer
     ports:
       - "8082:8082"
@@ -29,6 +32,7 @@ services:
       -  SPRING_RABBITMQ_HOST=rabbitmq
     
   producer:
+    container_name: producer
     image: sb-producer
     ports:
       - "8081:8081"
